entity_macros/tests/ui/derive/ent/duplicate-database.stderr
error: Already have a database elsewhere
  --> $DIR/duplicate-database.rs:11:11
   |
11 |     #[ent(database)]
   |           ^^^^^^^^
